--- a/app/src/main/res/layout/itemview_list_employe.xml
+++ b/app/src/main/res/layout/itemview_list_employe.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="@dimen/general_padding">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/txtItemNom"
             android:text="Randrianarisaona Mahery Haja" />
+
 
     </LinearLayout>
 
