--- a/app/src/main/res/layout/fragment_list_employe.xml
+++ b/app/src/main/res/layout/fragment_list_employe.xml
@@ -10,7 +10,9 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/RVListEmploye">
+        android:id="@+id/RVListEmploye"
+        android:paddingBottom="35dp"
+        >
 
     </android.support.v7.widget.RecyclerView>
 
