--- a/app/src/main/res/layout/viewgroup_base64_photo_picker.xml
+++ b/app/src/main/res/layout/viewgroup_base64_photo_picker.xml
@@ -20,7 +20,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="@dimen/image_button_dimens"
-        android:text="@string/choisir_prendre_une_photo"
+        android:text="fichier/camera"
         android:gravity="center"
         android:layout_margin="@dimen/little_margin"
         android:textSize="@dimen/little_font_size"
