--- a/app/src/main/res/layout/dialog_context_menu.xml
+++ b/app/src/main/res/layout/dialog_context_menu.xml
@@ -50,4 +50,27 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/layoutContextRevert"
+        android:padding="@dimen/little_padding"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="@dimen/average_icon_size"
+            android:layout_height="@dimen/average_icon_size"
+            android:src="@drawable/ic_revert" />
+
+        <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/annuler_operation"
+            android:textSize="@dimen/general_font_size"
+            android:layout_margin="@dimen/little_margin" />
+
+    </LinearLayout>
+
 </LinearLayout>
