--- a/app/src/main/res/layout/itemview_liste_employe_temp.xml
+++ b/app/src/main/res/layout/itemview_liste_employe_temp.xml
@@ -21,19 +21,24 @@
                 layout="@layout/itemview_list_employe_inside"
                 />
 
-
-
-
         <ImageView
-            android:layout_width="28dp"
-            android:layout_height="28dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:src="@drawable/ic_not_synchronized"
             android:layout_alignParentRight="true"
             android:layout_marginTop="32dp"
             android:layout_marginRight="16dp"
+            android:id="@+id/imgTempLoading"
             />
 
-
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/ic_temp_create"
+            android:id="@+id/imgTempOperationType"
+            android:layout_toLeftOf="@+id/imgTempLoading"
+            android:layout_marginTop="32dp"
+            android:layout_marginRight="3dp" />
 
 
     </RelativeLayout>
