--- a/app/src/main/res/layout/itemview_list_employe_inside.xml
+++ b/app/src/main/res/layout/itemview_list_employe_inside.xml
@@ -19,7 +19,18 @@
             android:src="@drawable/ic_mahery"
             android:id="@+id/imageViewItemPhoto"
             android:layout_marginLeft="@dimen/little_margin"
+            android:visibility="gone"
             />
+
+        <mg.etech.mobile.etechapp.presentation.customviews.PicassoImageView_
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:id="@+id/pImageViewItemPhoto"
+            >
+
+        </mg.etech.mobile.etechapp.presentation.customviews.PicassoImageView_>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
