--- a/app/src/main/res/layout/fragment_create_employe.xml
+++ b/app/src/main/res/layout/fragment_create_employe.xml
@@ -17,12 +17,17 @@
             android:orientation="vertical"
             android:padding="@dimen/general_padding">
 
-            <mg.etech.mobile.etechapp.commun.utils.TypefaceEditText
+            <com.wrapp.floatlabelededittext.FloatLabeledEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <mg.etech.mobile.etechapp.commun.utils.TypefaceEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/edtCreateEmployeNom"
                 style="@style/edt_general_style"
-                android:hint="@string/hint_nom_employe" />
+                    android:hint="@string/hint_nom_employe" />
+            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
 
             <mg.etech.mobile.etechapp.commun.utils.TypefaceEditText
                 android:layout_width="match_parent"
