--- a/app/src/main/res/layout/itemview_list_employe_inside.xml
+++ b/app/src/main/res/layout/itemview_list_employe_inside.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:orientation="vertical"
     >
@@ -38,12 +39,13 @@
             android:orientation="vertical"
             android:padding="@dimen/general_padding">
 
-            <TextView
+            <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/general_font_size"
                 android:id="@+id/txtItemMatricule"
-                android:text="first" />
+                android:text="first"
+                app:customTypeface="@string/font_crimson" />
 
             <TextView
                 android:layout_width="match_parent"
