--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="darkGray">#444444</color>
     <color name="etechBlueDark">#33acd4</color>
     <color name="etechGirlpink">#ffaaff</color>
+    <color name="etechWhiteGray">#e2e2e2</color>
 </resources>
