--- a/app/src/main/res/layout/activity_create_employe.xml
+++ b/app/src/main/res/layout/activity_create_employe.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="mg.etech.mobile.etechapp.presentation.activities.employe.createEmloye.CreateEmployeActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/etechWhiteGray">
 
     <fragment
         android:layout_width="match_parent"
