--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/etechGreen</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="edt_general_style">
@@ -14,6 +14,12 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/etechBlue</item>
         <item name="android:textSize">@dimen/general_font_size</item>
+    </style>
+
+    <style name="edt_general_light">
+        <item name="android:padding">12dp</item>
+        <item name="android:color">@color/etechBlue</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="general_typed_button">
