--- a/app/src/main/res/layout/viewgroup_expandable_form_section.xml
+++ b/app/src/main/res/layout/viewgroup_expandable_form_section.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:id="@+id/layoutFormSectionContent"
-            android:padding="@dimen/general_padding1_5x"></LinearLayout>
+            android:padding="@dimen/general_padding"></LinearLayout>
     </net.cachapa.expandablelayout.ExpandableLayout>
 
 
