--- a/app/src/main/res/layout/fragment_detail_employe.xml
+++ b/app/src/main/res/layout/fragment_detail_employe.xml
@@ -94,14 +94,20 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/general_padding"
+                    android:layout_marginTop="@dimen/little_margin"
+                    android:layout_marginBottom="@dimen/little_margin"
+                    android:layout_marginLeft="@dimen/general_margin"
+                    android:layout_marginRight="@dimen/general_margin"
                     android:id="@+id/cardDetailFront">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:padding="@dimen/general_padding"
+                        android:paddingTop="@dimen/little_padding"
+                        android:paddingBottom="@dimen/little_padding"
+                        android:paddingRight="@dimen/general_padding"
+                        android:paddingLeft="@dimen/general_padding"
                         android:gravity="center_horizontal">
 
                         <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
@@ -188,8 +194,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="HISTORIQUE DES POSTES"
-                            android:layout_margin="@dimen/little_margin"
-                            android:padding="@dimen/little_padding"
+                            android:paddingRight="@dimen/general_padding"
+                            android:background="@drawable/round_shape_numeric_green"
+                            android:drawableLeft="@drawable/ic_historic_poste"
                             android:id="@+id/btnDetailEmployeFlipToHistorique" />
 
 
