--- a/app/src/main/res/menu/menu_filter.xml
+++ b/app/src/main/res/menu/menu_filter.xml
@@ -12,4 +12,10 @@
         app:actionViewClass="android.support.v7.widget.SearchView"
         android:actionLayout="@layout/search_view_layout" />
 
+
+    <item
+        android:id="@+id/action_logout"
+        android:title="@string/action_logout"
+        app:showAsAction="never" />
+    ate
 </menu>
