--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,14 @@
             android:padding="@dimen/general_padding1_5x"
             android:orientation="vertical"
             >
-            <mg.etech.mobile.etechapp.commun.utils.TypefaceEditText
+
+            <com.wrapp.floatlabelededittext.FloatLabeledEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                app:fletTextAppearance="@style/general_float_edit">
+
+                <mg.etech.mobile.etechapp.commun.utils.TypefaceEditText
                 android:id="@+id/edtLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -54,6 +61,14 @@
                 style="@style/edt_general_style"
                 />
 
+            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
+
+
+            <com.wrapp.floatlabelededittext.FloatLabeledEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                app:fletTextAppearance="@style/general_float_edit">
             <mg.etech.mobile.etechapp.commun.utils.TypefaceEditText
                 android:id="@+id/edtPassword"
                 android:layout_width="match_parent"
@@ -62,6 +77,7 @@
                 style="@style/edt_general_style"
                 android:inputType="textPassword"
                 />
+            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
 
 
             <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
