--- a/app/src/main/res/layout/fragment_inscrire_user.xml
+++ b/app/src/main/res/layout/fragment_inscrire_user.xml
@@ -9,6 +9,7 @@
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/general_padding"
+        android:id="@+id/layoutInscrireRoot"
         >
 
 
