--- a/app/src/main/res/layout/fragment_detail_employe.xml
+++ b/app/src/main/res/layout/fragment_detail_employe.xml
@@ -25,7 +25,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="@dimen/photo_detail_size"
                     android:background="@color/etechBlack"></LinearLayout>
 
                 <de.hdodenhof.circleimageview.CircleImageView
@@ -41,13 +41,18 @@
                     android:visibility="gone"
                     />
 
+
                 <mg.etech.mobile.etechapp.presentation.customviews.PicassoImageView_
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="@dimen/detail_employe_photo_size"
+                    android:layout_height="@dimen/detail_employe_photo_size"
                     android:id="@+id/pImageViewDetailPhoto"
-                    android:layout_marginTop="25dp"
+                    android:layout_marginTop="@dimen/detail_photo_margin_top"
                     android:layout_centerHorizontal="true"
                     android:visibility="invisible"></mg.etech.mobile.etechapp.presentation.customviews.PicassoImageView_>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
             </RelativeLayout>
 
