--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,17 +9,17 @@
     </style>
 
     <style name="edt_general_style">
-        <item name="android:padding">12dp</item>
+        <item name="android:padding">@dimen/padding_for_general_edt</item>
         <item name="android:color">@color/etechBlue</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/etechBlue</item>
-        <item name="android:textSize">@dimen/general_font_size</item>
+        <item name="android:textSize">@dimen/little_font_size</item>
     </style>
 
     <style name="edt_general_light">
-        <item name="android:padding">12dp</item>
+        <item name="android:padding">@dimen/padding_for_general_edt</item>
         <item name="android:color">@color/etechBlue</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/little_font_size</item>
     </style>
 
     <style name="general_typed_button">
@@ -32,8 +32,8 @@
     </style>
 
     <style name="image_button_dimens">
-        <item name="android:width">50dp</item>
-        <item name="android:height">50dp</item>
+        <item name="android:width">@dimen/fab_button_size</item>
+        <item name="android:height">@dimen/fab_button_size</item>
     </style>
 
 </resources>
