--- a/app/src/main/res/layout/fragment_list_employe.xml
+++ b/app/src/main/res/layout/fragment_list_employe.xml
@@ -6,8 +6,21 @@
     tools:context=".presentation.fragments.employe.list.ListEmployeFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
+        <mg.etech.mobile.etechapp.presentation.customviews.ListEmployeHeader_
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/listEmployeHeader">
+
+
+        </mg.etech.mobile.etechapp.presentation.customviews.ListEmployeHeader_>
+
+
+        <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/RVListEmploye"
@@ -15,5 +28,7 @@
         >
 
     </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
 
 </FrameLayout>
